modificação na pagina index

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         {{ resposta_html | safe }}
       </div>
     {% else %}
-      <p class="text-gray-500">Comece a conversa com seu Chatbot!</p>
+      <p class="text-gray-500">Comece a conversa com seu Chatbot! <br> Ele esta preparado para responder esclusivamente questões que lhe ajudem a ingressar em uma instituição de ensino</p>
     {% endif %}
   </main>
 
